test/compile_failure/07_return_without_value.c
// EXPECT-ERRORS: 1
// EXPECT: non-void function must return a value
int main() {
    return;
}
